--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,8 @@
-runtime: nodejs12
-instance_class: F1
+runtime: nodejs
+# This sample incurs costs to run on the App Engine flexible environment.
+# The settings below are to reduce costs during testing and are not appropriate
+# for production use. For more information, see:
+# https://cloud.google.com/appengine/docs/flexible/nodejs/configuring-your-app-with-app-yaml
 automatic_scaling:
-	min_instances: 1
-	max_instances: 1
+  min_num_instances: 1
+  max_num_instances: 1
