App.yaml runtime added.

--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,5 @@
-runtime: nodejs
+runtime: nodejs12
+instance_class: F1
 # This sample incurs costs to run on the App Engine flexible environment.
 # The settings below are to reduce costs during testing and are not appropriate
 # for production use. For more information, see:
