--- a/app.yaml
+++ b/app.yaml
@@ -1,9 +1,17 @@
-runtime: nodejs12
+runtime: nodejs10
+
 instance_class: F1
-# This sample incurs costs to run on the App Engine flexible environment.
-# The settings below are to reduce costs during testing and are not appropriate
-# for production use. For more information, see:
-# https://cloud.google.com/appengine/docs/flexible/nodejs/configuring-your-app-with-app-yaml
+
 automatic_scaling:
-  min_num_instances: 1
-  max_num_instances: 1
+  max_instances: 1
+  
+handlers:
+- url: /stylesheets
+  static_dir: stylesheets
+
+- url: /.*
+  secure: always
+  redirect_http_response_code: 301
+  script: auto
+
+  
